--- a/Umbrella/Umbrella.vcxproj
+++ b/Umbrella/Umbrella.vcxproj
@@ -153,7 +153,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -181,6 +181,8 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="imgui\TextEditor.h" />
+    <ClInclude Include="ItemList.h" />
     <ClInclude Include="packet.h" />
     <ClInclude Include="proton\hash.hpp" />
     <ClInclude Include="proton\rtparam.hpp" />
@@ -209,6 +211,7 @@
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="imgui\TextEditor.cpp" />
     <ClCompile Include="MainBot.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
